--- a/src/web/public/index.html
+++ b/src/web/public/index.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" sizes="114x114"
     href="https://www.santegidio.org/FSnetTemplates/SE2018/__commons/images/foregrounds/favicon_114.png" />
   <link rel="apple-touch-icon" sizes="144x144"
-    href="https://www.santegidio.org/FSnetTemplates/SE2018/__commons/images/foregrounds/favicon_144.png" />
+    href="https://www.santegidio.org/FSnetTemplates/SE2018/__commons/images/foregrounds/favicon_144.png" />  
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -58,7 +58,8 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    -->    
+    </body>
 </body>
 
 </html>
